--- a/comptabilite.html
+++ b/comptabilite.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header13 cid-soFuvwGpB1 mbr-parallax-background" id="header13-f">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header13 cid-soFuvwGpB1 mbr-parallax-background" id="header13-f">
 
     
 
@@ -90,7 +90,7 @@
         <div class="container mt-5 pt-5 pb-5">
            <div class="media-container-column" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BNelEackZ3Ls/9Oib6l5l2f8SL7p3PTJhRQvTpie/8776nDsL3Wm8HVagqkIY0enI0M7jeYjwi3gTDVprUCzG5e5cAHwA/h26YBozKkyxi11+dp5HWRpUVp2Vxty/vm0">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EmQqhp5+0YGIb7lrN+0vpDCiNkyz3ZeJTC+WF9Sy41VAw+YADnOjrflgR7WwsDRG6Y/7EbVkCZlg6N3QjdYOyOL+a5bMS4/NQm5NHlev6+enUtDM70ikcfS0pXwrBE1f">
                     <div class="row justify-content-center form-inline">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre confiance !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -170,11 +170,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_11" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_20" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">Comptabilité financière niveau 1</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Il s'agit de faire le point essentiellement sur :&nbsp;<br>&nbsp;Comptabilité financière et Entité
@@ -193,11 +193,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_11" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_20" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">Comptabilité financière niveau 2</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7"></p>
                                     </div>
@@ -205,11 +205,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_11" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_20" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-5">Comptabilité financière niveau 3</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_11" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_20" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7"></p>
                                     </div>
