--- a/informatique.html
+++ b/informatique.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="header13 cid-soJR6Z6NAP mbr-parallax-background" id="header13-u">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header13 cid-soJR6Z6NAP mbr-parallax-background" id="header13-u">
 
     
 
@@ -89,7 +89,7 @@
         <div class="container mt-5 pt-5 pb-5">
            <div class="media-container-column" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wgBl4Ttj5JOU5YbudgspcGwPJzZ5ya4hDeiaVhTar5vS0okWwfM0jFc8zs0Cl7hBrizrBX2SiQQt/7/JR8AzDyzNnvT2qMRfymTNK6m7k73GBeux4ISyujsUyOsShIsC">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jBQcIRlVZavei/+sCMhhcQA47M/6TWS2pa62DH9RoS89vZfzNowHz7vnyivCkxph+ponjoc1J4MqRAORT8PZExieNbBelSaDGzJHc/7cIpRpev63KAN+CpH2yLtSRgKd">
                     <div class="row justify-content-center form-inline">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -170,11 +170,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_39" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_3" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">Suite Open Office / Microsoft Office</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est une application hors ligne pour Windows et Mac permettant de créer facilement des sites Web de petite et moyenne taille, des pages de destination, des CV et des portfolios en ligne, des sites promotionnels pour des applications, des événements, des services et des produits.</p>
@@ -183,11 +183,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_39" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_3" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">Algorithme et langage</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est parfait pour les non-techniciens qui ne sont pas familiers avec les subtilités du développement web et pour les concepteurs qui préfèrent travailler autant que possible visuellement , sans se battre avec le code. Mobirise est aussi idéal pour les pro-codeurs pour le prototypage rapide et les projets de petits clients.</p>
@@ -196,11 +196,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_39" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_3" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-5">Développement Web</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_39" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_3" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Principales différences par rapport aux constructeurs traditionnels :<br>* Extrêmement minimaliste <strong>facile à utiliser</strong> interface<br>* <strong>Mobile</strong>respectueux des dernieres technique web et "out-the-box"<br>* <strong>Gratuit</strong> pour usage commercial et à but non lucratif</p>
