--- a/marketing.html
+++ b/marketing.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="header13 cid-soJR4s2D46 mbr-parallax-background" id="header13-o">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header13 cid-soJR4s2D46 mbr-parallax-background" id="header13-o">
 
     
 
@@ -90,7 +90,7 @@
         <div class="container mt-5 pt-5 pb-5">
            <div class="media-container-column" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WI4/OeJjMvpSEjoCGRgWOKLBck2jocQYPW2ICqZ2QYKyjBxq014nRu95AmZzxe5rEYsvWLb5EPsukFFJYnmKh2I/AX8s7d7DF3xJKOIcObi95R7UhG2wvJ2Kc9kMEFgQ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="q2Voj0iB7MKHjazeEs1j6k+JT16WmYtocfkaqkiSFSjOvP/1A0daZsRO+QaoBVSoblcYvKh2mQH3UGGywzoUdi61lt19gw4DEXhXWf8jzjdOfz6AiB3Avj5r4oWm26wM">
                     <div class="row justify-content-center form-inline">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -171,13 +171,13 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_28" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_32" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Qu'est-ce que Mobirise ?
                                         </h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_28" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_32" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est une application hors ligne pour Windows et Mac permettant de créer facilement des sites Web de petite et moyenne taille, des pages de destination, des CV et des portfolios en ligne, des sites promotionnels pour des applications, des événements, des services et des produits.</p>
@@ -186,13 +186,13 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_28" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_32" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Est-ce bon pour moi ?
                                         </h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_28" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_32" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est parfait pour les non-techniciens qui ne sont pas familiers avec les subtilités du développement web et pour les concepteurs qui préfèrent travailler autant que possible visuellement , sans se battre avec le code. Mobirise est aussi idéal pour les pro-codeurs pour le prototypage rapide et les projets de petits clients.</p>
@@ -201,13 +201,13 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_28" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_32" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-5">
                                             <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Pourquoi Mobirise ?
                                         </h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_28" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_32" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Principales différences par rapport aux constructeurs traditionnels :<br>* Extrêmement minimaliste <strong>facile à utiliser</strong> interface<br>* <strong>Mobile</strong>respectueux des dernieres technique web et "out-the-box"<br>* <strong>Gratuit</strong> pour usage commercial et à but non lucratif</p>
