--- a/maths-statistiques.html
+++ b/maths-statistiques.html
@@ -69,7 +69,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="header13 cid-spvm0Ku1Zo mbr-parallax-background" id="header13-1j">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header13 cid-spvm0Ku1Zo mbr-parallax-background" id="header13-1j">
 
     
 
@@ -89,7 +89,7 @@
         <div class="container mt-5 pt-5 pb-5">
            <div class="media-container-column" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="AUHFz51H06m4w1QWxVcaYVS5wGxzKqVKkmtAcYdbG446pvxpjMLzmdcBZ2vH17VkOJrTM37obBocxMbBYgzNX3+kB9g8uHTRd9JXiEgx0uHo0oKzDCgHQgoSeYUnFGAK">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="iL7D2EH30Y7WgH8AQy1Md7oH/BEM9loVetPWt40jOnp1iRJnExqGvAuFcwFS3v004oFG4brMMtGGcZycwqDboXp1JSan0VeW9uv5FAaEA+/qnIZzOIOQ1uccuHhe/aca">
                     <div class="row justify-content-center form-inline">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -169,11 +169,11 @@
                         <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content pt-5 mt-2">
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingOne">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_52" aria-expanded="false" aria-controls="collapse1">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_44" aria-expanded="false" aria-controls="collapse1">
                                         <h4 class="mbr-fonts-style display-5">Les bases en statistiques</h4>
                                     </a>
                                 </div>
-                                <div id="collapse1_52" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                                <div id="collapse1_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est une application hors ligne pour Windows et Mac permettant de créer facilement des sites Web de petite et moyenne taille, des pages de destination, des CV et des portfolios en ligne, des sites promotionnels pour des applications, des événements, des services et des produits.</p>
@@ -182,11 +182,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingTwo">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_52" aria-expanded="false" aria-controls="collapse2">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_44" aria-expanded="false" aria-controls="collapse2">
                                         <h4 class="mbr-fonts-style display-5">Analyse de données&nbsp;</h4>
                                     </a>
                                 </div>
-                                <div id="collapse2_52" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                                <div id="collapse2_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Mobirise est parfait pour les non-techniciens qui ne sont pas familiers avec les subtilités du développement web et pour les concepteurs qui préfèrent travailler autant que possible visuellement , sans se battre avec le code. Mobirise est aussi idéal pour les pro-codeurs pour le prototypage rapide et les projets de petits clients.</p>
@@ -195,11 +195,11 @@
                             </div>
                             <div class="card">
                                 <div class="card-header" role="tab" id="headingThree">
-                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_52" aria-expanded="true" aria-controls="collapse3">
+                                    <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_44" aria-expanded="true" aria-controls="collapse3">
                                         <h4 class="mbr-fonts-style display-5">Mathématiques</h4>
                                     </a>
                                 </div>
-                                <div id="collapse3_52" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                                <div id="collapse3_44" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                     <div class="panel-body p-4">
                                         <p class="mbr-fonts-style panel-text display-7">
                                            Principales différences par rapport aux constructeurs traditionnels :<br>* Extrêmement minimaliste <strong>facile à utiliser</strong> interface<br>* <strong>Mobile</strong>respectueux des dernieres technique web et "out-the-box"<br>* <strong>Gratuit</strong> pour usage commercial et à but non lucratif</p>
