--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-1"><br>Mansa Académie</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
-                        Apprendre la gestion et les données avec les outils et méthodes professionnelles</p>
+                        Apprendre la gestion et les nouvelles technologies à travers le web</p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-primary display-4" href="https://mansaacademie.thinkific.com/users/sign_up" target="_blank">Joindre l'académie</a></div>
 
                     <div class="icons-media-container mbr-white">
