--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
         <div class="container align-center">
             <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-                Abonnement </h2>
+                Abonnements </h2>
             <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
     
         </div>
